--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -1,6 +1,6 @@
 mixin header-block()
 	// / .Promo
-	section.section#main.prm
+	section.section#main.prm&attributes(attributes)
 		.wrp__bg.wow.slideInRight(data-wow-duration='1.2s')
 		// / WRP
 		.arn.prm__wrp
