--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -1,6 +1,6 @@
 mixin s-team()
 	// / .Team
-	section#about.tm
+	section#about.tm&attributes(attributes)
 		.arn
 			.pg__ttl.hidden
 				h3 Наша команда
