--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -118,13 +118,13 @@ block pagecontent
 		//- +top-nav()
 	
 	#wrp.wrp
-		+header-block()
-		+s-portfolio
-		+s-about
-		+s-team
-		+s-servises
-		+s-logos
-		+s-form()
-		//- +s-contact()
-		+footer()
+		+header-block(class="")
+		+s-portfolio(class="")
+		+s-about(class="")
+		+s-team(class="")
+		+s-servises(class="")
+		+s-logos(class="")
+		+s-form(class="")
+	//- +s-contact()
+	+footer()
 
