--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -32,8 +32,8 @@ html(lang="ru")
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.min.css" />
 		link(rel="stylesheet", href="libs/magnificPopup/magnific-popup.css")
-		//- link(rel="stylesheet", href="libs/swiper-4.2.0/swiper.min.css")
-		link(rel="stylesheet", href="libs/slick/slick.css")
+		link(rel="stylesheet", href="libs/swiper-4.2.0/swiper.min.css")
+		//- link(rel="stylesheet", href="libs/slick/slick.css")
 		link(rel="stylesheet", href="libs/fullPage.js/dist/fullpage.min.css")
 		//- link(rel="stylesheet", href="libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css")
 
@@ -60,6 +60,8 @@ html(lang="ru")
 		script(src="libs/fullPage.js/vendors/easings.min.js")
 		script(src="libs/fullPage.js/vendors/scrolloverflow.min.js")
 		script(src="/libs/fullPage.js/dist/fullpage.min.js")
+		script(src="/js/jquery.onepage-scroll.js")
+
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js")
@@ -77,8 +79,8 @@ html(lang="ru")
 		script(src="libs/magnificPopup/jquery.magnific-popup.min.js")
 		// modal libs
 		// slider libs
-		script(src="libs/slick/slick.min.js")
-		//- script(src="libs/swiper-4.2.0/swiper.min.js")
+		//- script(src="libs/slick/slick.min.js")
+		script(src="libs/swiper-4.2.0/swiper.min.js")
 		// /slider libs
 		// for svg libs
 		script(src="libs/svg4everybody-master/svg4everybody.min.js")
